Replace PRISM FLUX title with Vikrampawar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRISM FLUX - Digital Innovation Studio</title>
+    <title>Vikrampawar</title>
     <link rel="stylesheet" href="templatemo-prism-flux.css">
 <!-- 
 
@@ -318,4 +318,5 @@ https://templatemo.com/tm-600-prism-flux
     </footer>
 <script src="templatemo-prism-scripts.js"></script>
 </body>
+
 </html>
