--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ https://templatemo.com/tm-600-prism-flux
                     </div>
                 </div>
                 <span class="logo-text">
-                    <span class="prism">PRISM</span>
-                    <span class="flux">FLUX</span>
+                    <span class="prism">VIKRAM</span>
+                    <span class="flux">PAWAR</span>
                 </span>
             </a>
             
@@ -320,3 +320,4 @@ https://templatemo.com/tm-600-prism-flux
 </body>
 
 </html>
+
